--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,26 @@
                  <target>1.8</target>
              </configuration>
          </plugin>
+         
+		<plugin>
+		  <artifactId>maven-antrun-plugin</artifactId>
+		  <version>1.8</version>
+		  <executions>
+		    <execution>
+		      <phase>install</phase>
+		      <configuration>
+		        <target>
+		          <copy file="${project.build.directory}/${project.build.finalName}.jar"
+		                todir="C:\Users\lespa\Desktop\Test Server\Nether Generator\plugins" />
+		        </target>
+		      </configuration>
+		      <goals>
+		        <goal>run</goal>
+		      </goals>
+		    </execution>
+		  </executions>
+		</plugin>
+         
      </plugins>
   </build>
   <repositories>
@@ -29,7 +49,7 @@
 		<dependency>
 		       <groupId>org.spigotmc</groupId>
 		       <artifactId>spigot-api</artifactId>
-		       <version>1.16.4-R0.1-SNAPSHOT</version>
+		       <version>1.17.1-R0.1-SNAPSHOT</version>
 		       <scope>provided</scope>
 		</dependency>
 		<dependency>
