--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		      <configuration>
 		        <target>
 		          <copy file="${project.build.directory}/${project.build.finalName}.jar"
-		                todir="E:\Test Server\Piranesi Developer Testing\plugins" />
+		                todir="E:\hunger games plugin testing\plugins" />
 		        </target>
 		      </configuration>
 		      <goals>
